BB-417: change function names to fit scopes
